<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">体温管理</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="tt_login">体温管理</string>
    <string name="tt_ct">测量体温</string>
    <string name="tt_blood">测量血压和心率</string>
    <string name="tt_bed">床位信息</string>
    <string name="tt_group">分组信息</string>
    <string name="tt_upload">待上传数据</string>
    <string name="tt_upload_history">上传历史</string>
    <string name="tt_upload_detail">上传历史明细</string>
    <string name="tt_setting">参数设置</string>
    <string name="ttl_login">退出</string>
    <string name="ttr_login">登陆</string>
    <string name="ttl_back">返回</string>
    <string name="ttr_ct">上传</string>
    <string name="ttr_bed">新建病床</string>
    <string name="ttr_group">新建分组</string>
    <string name="ttr_bed_assign">完成选择</string>
    <string name="ttr_upload">清空</string>
    <string name="ttr_setting">保存</string>

    <color name="layoutBackgroundColor">#000000</color>
    <color name="dialogBackgroundColor">#8B9DB4</color>
    <color name="buttonBackgroundColor">#186D8C</color>
    <color name="transparent">#00000000</color>
    <color name="translucence">#E0000000</color>

    <string name="strOrderByMeter">按是否测量排序</string>
    <string name="addBed">新增床位</string>
    <string name="addGroup">新增分组</string>
    <string name="addBedL">新增床位:</string>
    <string name="addGroupL">新增分组:</string>
    <string name="groupsL">所属分组:</string>
    <string name="userLabel">姓名/工号：</string>
    <string name="lb_ward">病区：</string>
    <string name="groupMng">分组管理</string>
    <string name="assignBed">分配病床</string>
    <string name="autoSave">自动保存体温数据</string>
    <string name="soundOnSaveSucceed">测量成功，声音提醒</string>
    <string name="soundOnSaveFail">测量失败，声音提醒</string>
    <string name="soundOnUploadSucceed">上传成功,声音提醒</string>
    <string name="soundOnUploadFail">上传失败,声音提醒</string>
    <string name="servicerAddress">直接上传到服务器，请输入服务器地址：</string>
    <string name="bluetooth">蓝牙</string>
    <string name="searchBluetooth">查找蓝牙设备</string>
    <string name="bluetoothDeviceAlert">请查找蓝牙设备</string>

    <color name="navbarunactivedbg">#3EFFFFFF</color>

    <string name="title_activity_lv_with_button_ext">LvWithButtonExt</string>
    <string name="title_activity_booth">BoothActivity</string>
    <string name="action_settings">Settings</string>

    <color name="bg_bed_list_item_selected">#500ddab6</color>

    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_history_detail">HistoryDetailActivity</string>

    <!-- BluetoothChat -->
    <string name="send">发送</string>
    <string name="not_connected">你没有连接到一个设备</string>
    <string name="bt_not_enabled_leaving">蓝牙未启用。程序退出</string>
    <string name="title_connecting">正在连接...</string>
    <string name="title_connected_to">已连接: </string>
    <string name="title_not_connected">未连接</string>
    <string name="button_clean">清屏</string>
    <string name="button_break">连接</string>
    <string name="checkBox_sixteen">十六进制显示</string>
    <string name="radioMale">十六进制输出</string>
    <string name="checkBox_line_feed">换行输出</string>
    <string name="button_cleantwo">清除输入框</string>
    <string name="duankai">断开</string>
    <string name="prompt_message">没有数据可供查看</string>

    <!-- DeviceListActivity -->
    <string name="scanning">扫描未知设备...</string>
    <string name="select_device">选择一个耳温计连接</string>
    <string name="none_paired">没有已配对设备</string>
    <string name="none_found">没有建立连接</string>
    <string name="title_paired_devices">配对的装备</string>
    <string name="title_other_devices">其他可用的设备</string>
    <string name="button_scan">扫描设备</string>
    <string name="button_full_screen">全屏</string>
    <string name="button_return">返回</string>
    <string name="button_delete">删除</string>
    <!-- Options Menu -->
    <!-- Options Menu -->
    <string name="secure_connect">连接一个设备</string>
    <string name="insecure_connect">设置</string>
    <string name="discoverable">设置蓝牙可见</string>
    <string name="title_activity_blood">BloodActivity</string>

</resources>