<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutBackgroundColor" >

	<include android:id="@+id/titleBar" android:layout_width="fill_parent" layout="@layout/title_bar" /> 
	<include android:layout_width="fill_parent" layout="@layout/navigation_bar" />  

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/navigateDiv"
        android:layout_below="@+id/titleBar" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0" >

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding_setting_list_row"
                    android:paddingTop="@dimen/padding_setting_list_row" >
                    
                    <TextView
                        android:id="@+id/tv_autosave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/autoSave"
                        android:textSize="@dimen/text_size_body" />
            
                    <CheckBox
                        android:id="@+id/autoSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                		android:layout_gravity="left|center_vertical"
                		android:textSize="@dimen/text_size_body" 
                		style="@style/CustomCheckBox"
                        android:padding="5dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding_setting_list_row"
                    android:paddingTop="@dimen/padding_setting_list_row" >

                    <TextView
                        android:id="@+id/tv_soundOnSaveSucceed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/soundOnSaveSucceed"
                		android:textSize="@dimen/text_size_body" />

                    <CheckBox
                        android:id="@+id/soundOnSaveSucceed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                		android:layout_gravity="left|center_vertical"
                		android:textSize="@dimen/text_size_body" 
                		style="@style/CustomCheckBox"
                        android:padding="5dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding_setting_list_row"
                    android:paddingTop="@dimen/padding_setting_list_row" >

                    <TextView
                        android:id="@+id/tv_soundOnSaveFail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/soundOnSaveFail"
                		android:textSize="@dimen/text_size_body" />

                    <CheckBox
                        android:id="@+id/soundOnSaveFail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                		android:layout_gravity="left|center_vertical"
                		android:textSize="@dimen/text_size_body" 
                		style="@style/CustomCheckBox"
                        android:padding="5dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding_setting_list_row"
                    android:paddingTop="@dimen/padding_setting_list_row" >

                    <TextView
                        android:id="@+id/tv_soundOnUploadSucceed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/soundOnUploadSucceed"
                		android:textSize="@dimen/text_size_body" />

                    <CheckBox
                        android:id="@+id/soundOnUploadSucceed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                		android:layout_gravity="left|center_vertical"
                		android:textSize="@dimen/text_size_body" 
                		style="@style/CustomCheckBox"
                        android:padding="5dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding_setting_list_row"
                    android:paddingTop="@dimen/padding_setting_list_row" >

                    <TextView
                        android:id="@+id/tv_soundOnUploadFail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/soundOnUploadFail"
                        android:textSize="@dimen/text_size_body" />

                    <CheckBox
                        android:id="@+id/soundOnUploadFail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                		android:layout_gravity="left|center_vertical"
                		android:textSize="@dimen/text_size_body" 
                		style="@style/CustomCheckBox"
                        android:padding="5dp" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <CheckBox
                    android:id="@+id/servicerAddressCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                		android:layout_gravity="left|center_vertical"
                		android:textSize="@dimen/text_size_body" 
                	style="@style/CustomCheckBox"
                    android:text="@string/servicerAddress" />

                <EditText
                    android:id="@+id/servicerAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                	android:textSize="@dimen/text_size_body" >

                    <requestFocus />
                </EditText>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <CheckBox
                        android:id="@+id/bluetoothCB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                		style="@style/CustomCheckBox"
                		android:layout_gravity="left|center_vertical"
                		android:textSize="@dimen/text_size_body" 
                        android:text="@string/bluetooth" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="right" >

                        <Button
                            android:id="@+id/searchBluetooth"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/searchBluetooth" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/bluetoothDevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                	android:textSize="@dimen/text_size_body"
                    android:text="@string/bluetoothDeviceAlert" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>