<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
     >
<LinearLayout 
    android:id="@+id/dialogTitle"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/height_title_bar"
    android:background="@drawable/ic_title_bg"
    android:gravity="center_vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:orientation="horizontal" >
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left"
        android:singleLine="true"
        android:text="请选择一个耳温计"
        android:textColor="@android:color/white" 
        android:textSize="@dimen/text_size_title"
        />
    <ImageView
            android:id="@+id/ic_waiting"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
       	 	android:gravity="right"
            android:src="@drawable/loading"
            android:visibility="gone" />
</LinearLayout>
     

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/dialogTitle"
        android:layout_above="@+id/tableLayout1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#666"
            android:paddingLeft="5dp"
            android:text="@string/title_paired_devices"
            android:textColor="#fff"
            android:textSize="@dimen/text_size_body"
            android:visibility="visible" />

        

        <ListView
            android:id="@+id/paired_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:stackFromBottom="true" />


            <TextView
                android:id="@+id/title_new_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#666"
                android:padding="5dp"
                android:text="@string/title_other_devices"
                android:textColor="#fff"
                android:textSize="@dimen/text_size_body"
                android:visibility="visible" />

        <ListView
            android:id="@+id/new_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stackFromBottom="true" 
        	android:layout_weight="2"
        	android:textSize="@dimen/text_size_body"
        	/>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/button_scan"
                android:textSize="@dimen/text_size_body_btn" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="取  消"
                android:textSize="@dimen/text_size_body_btn" />

        </TableRow>
    </TableLayout>

</RelativeLayout>